# near_real-time_sfincs

./: .gitignore  CHANGELOG.md  Dockerfile.app  Dockerfile.notebook  INSTALL.md  LICENSE  README.md  SECURITY.md  compose.yaml  pyproject.toml  requirements.txt  run_sfincs.sh
data/NWM/: domain_attributes.csv  domain_boundary_line.geojson  domain_divides.gpkg  domain_flowlines.gpkg  domain_network.csv  domain_nexus.gpkg  downstream_nexus.gpkg  outflow_nexus.gpkg
data/NWM/nwm30_retrospective/: 20190520_20190603.parquet
data/SFINCS/data_catalogs/lynker_spatial/: gridded_data.yaml
notebooks/: 01_build_sfincs_from_nwm.ipynb  02_post_process.ipynb  03_evaluate_fims.ipynb  README.md
tools/: retrospective_nwm.py
