[project]
name = "RISE"
version = "0.1.0"
description = "RISE: Real-time Inundation mapping using the SFINCS Engine"
authors = [
    { name = "Tadd.Bindas", email = "Tadd.N.Bindas@rtx.com" }
]
dynamic = ["dependencies"]

readme = "README.md"
requires-python = ">= 3.9"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
jupyter = [
    "jupyterlab==3.6.7",
]

[tool.hatch.dependencies]
path = "requirements.txt"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/rise"]

[tool.pytest.ini_options]
pythonpath = [".", "src"]
